--- a/index.html
+++ b/index.html
@@ -436,8 +436,11 @@
                         title: "ECompetencia Winner",
                         description: "Winner of web application competition ECompetencia held by Iqra University​."
                     }, {
-                        title: "Techon Winner",
-                        description: "Winner of web application competition Techon held by Aptech."
+                        title: "Techon Winner 2",
+                        description: "Winner of web application competition Techon 2 held by Aptech."
+                    },{
+                        title: "Techon Winner 3",
+                        description: "Winner of mobile application competition Techon 3 held by Aptech."
                     }
                 ],
                 activities: [
