--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </div>
 
             <div class="row">
-                <div class="col-md-8 section__resume resume-list" id="certifications">
+                <div class="col-md-8 section__resume resume-list" id="certifications-container">
                     <h3 class="resume-list_title">certifications</h3>
                 </div>
             </div>
