--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
                 )
             })
             me['certifications'].forEach(item=> {
-                $('#experience-container').append(
+                $('#certifications-container').append(
                     "<div class='resume-list__block'>"+
                     "<p class='resume-list__block-title'>"+item['institute']+"</p>"+
                     "<p class='resume-list__block-date'>"+item['timeline']+"</p>"+
