--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
     <head>
+        <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
+        <meta http-equiv="content-language" content="en">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <title>Shehzad Ahmed - Full Stack Web Developer</title>
+        <meta name="description" content="Shehzad Ahmed, MERN Stack Developer">
+        <link rel="shortcut icon" type="image/png" href="https://shaxad.netlify.app/assets/img/meh.jpg">
+        <meta name="keywords" content="Shehzad Ahmed, Shaxadhere, Shexadd, Shaxadd, Shehzad Ahmed MERN Stack Developer, Shehzad Ahmed Full Stack Developer, Node JS, React JS, Javascript, React Native, PHPRapid, phprapid" />
+        <meta name="author" content="Shehzad Ahmed" />
+        <meta name="publisher" content="Shehzad Ahmed" />
+        <meta name="copyright" content="Shehzad Ahmed" />
+        <meta name="page-topic" content="Portfolio, Resume" />
+        <meta name="page-type" content="Homepage" />
+        <meta name="audience" content="Everyone" />
+        <meta name="robots" content="index, follow" />
+        <meta property="og:title" content="Shehzad Ahmed - MERN Stack Developer" />
+        <meta property="og:locale" content="en_US" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://shaxad.netlify.app" />
+        <meta property="og:site_name" content="Shehzad Ahmed - MERN Stack Developer" />
+        <meta property="og:description" content="Shehzad Ahmed, MERN Stack Developer" />
+        <meta property="og:image" content="https://shaxad.netlify.app/assets/img/meh.jpg" />
+        <meta property="og:url" content=https://shaxad.netlify.app" />
+        <meta name="twitter:title" content="Shehzad Ahmed, MERN Stack Developer" />
+        <meta name="twitter:description" content="Shehzad Ahmed, MERN Stack Developer" />
+        <meta name="twitter:image" content="https://shaxad.netlify.app/assets/img/meh.jpg" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <title>Shehzad Ahmed - MERN Stack Developer</title>
         <link rel="icon" href="assets/img/favicon.ico"/>
         <link rel="stylesheet" href="assets/css/color.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Inconsolata" rel="stylesheet">
@@ -365,7 +386,6 @@
         <script src="assets/js/portfolio-filter.js"></script>
         <script src="assets/js/slider-carousel.js"></script>
         <script src="assets/js/mobile-menu.js"></script>
-        <script src="assets/js/contacts.js"></script>
         <script src="assets/js/mbclicker.min.js"></script>
         <script src="assets/js/site-btn.js"></script>
         <script src="assets/js/style-switcher.js"></script>
