--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
         address: "Karachi, Pakistan",
         description:
           "I am a MERN Stack Developer able to build MERN Web Applications from the ground up - from concept, navigation, and layout to programming and logic building. Skilled at writing well-designed and developed, testable and efficient code using current best practices in Web Application Development. Fast learner, hard worker and team player who is proficient in an array of scripting languages and multimedia Web tools.",
-        resume: "Shehzad Ahmed.pdf",
+        resume: "Shehzad Ahmed Resume.pdf",
         studiesDescription:
           "Developing web-based applications and progressive web apps, solving real life problems with the help of softwares. Passionated about developing life-changing good quality and resource saving softwares. Looking forward to work with the community and learn more and more everyday.",
         experience: [
