--- a/index.html
+++ b/index.html
@@ -658,12 +658,22 @@
             type: "libs",
           },
           {
+            image: "eartt.png",
+            title:
+              "EARTT - an accounting and information management system",
+            description:
+              "a web application based on php, developed from scratch to manage fee collection, fee management, expense management, salary management, student information management, student queries management etc.",
+            link: "https://artt.edu.pk/eartt",
+            stacks: ["PHP", "MySQL", "PHP Rapid", "Javascript", "Jquery", "Ajax"],
+            type: "websites",
+          },
+          {
             image: "csslms.png",
             title: "Learning Management System ARTT CSS Academy",
             description:
               "Learning Management System Web Application Based on core php, Zoom SDK, DRM-X Integration.",
             link: "https://lms.arttcssacademy.com",
-            stacks: ["PHP", "Javascript"],
+            stacks: ["PHP", "Javascript", "Jquery", "Ajax"],
             type: "websites",
           },
           {
@@ -681,7 +691,7 @@
             description:
               "Learning Management System Web Application Based on core php and some parts like Zoom API integration are based on React JS.",
             link: "https://lms.artt.edu.pk",
-            stacks: ["PHP", "Javascript", "mysql"],
+            stacks: ["PHP", "Javascript", "MySQL", "Jquery", "Ajax"],
             type: "websites",
           },
           {
@@ -690,7 +700,7 @@
             description:
               "Developed on asp.net mvc c#, a discount coupons website for an organization which sells coupons.",
             link: "https://www.grabthecoupons.com",
-            stacks: ["C#", "MVC", "JavaScript", "MS SQL Server", "ASP.NET"],
+            stacks: ["C#", "MVC", "JavaScript", "MS SQL Server", "ASP.NET", "Jquery", "Ajax"],
             type: "websites",
           },
           {
